Sketch with flex. Need to solve size bug

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <button id="user">USER</button>
+        <button id="send">SEND</button>
+        <button id="erase">ERASE ALL</button>
+        <input type="color" name="" id="colorInput">
         <div id="container"></div>
 
         <script src="script.js"></script>
