Bug solved. Organize and clean the code?

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div class="casket">
         <div id="otherItems">
             <button id="send">CUSTOMIZE</button>
+            <button id="eraseOne">ERASE ONE BY ONE</button>
             <button id="erase">ERASE ALL</button>
             <button id="rainbow">RAINBOW</button>
             <input type="color" name="" id="colorInput">
