Clean code needs to be implemented, the rest for now is done

--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-    <div class="casket">
-        <div id="otherItems">
+        <div id="otherItemsLeft">
             <button id="send">CUSTOMIZE</button>
-            <button id="eraseOne">ERASE ONE BY ONE</button>
-            <button id="erase">ERASE ALL</button>
-            <button id="rainbow">RAINBOW</button>
-            <input type="color" name="" id="colorInput">
+            <button id="erase">ERASE ALL</button> 
+            <button id="black">BLACK</button>
+          
         </div>
         <div id="container"></div>
-    </div>
+        <div id="otherItemsRight">
+            <button id="rainbow">RAINBOW</button>
+            <button id="warm">WARM COLORS</button>
+            <button id="cold">COLD COLORS</button> 
+        </div>
         <script src="script.js"></script>
     </body>
 </html>
