--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+    <h1>&#9400; Clickxetch Alfa v.1.0</h1>
+    <p id="subheading">This is Clickxtech! Be careful about what you draw cause once its done the only way to erase something is to <strong>destroy</strong> it! So be careful!</p>
+    <div id="ninketch">
         <div id="otherItemsLeft">
             <button id="send">CUSTOMIZE</button>
             <button id="erase">ERASE ALL</button> 
@@ -18,6 +21,10 @@
             <button id="warm">WARM COLORS</button>
             <button id="cold">COLD COLORS</button> 
         </div>
+    </div>
+    <div id="footer">
+        <p>&#9400; 2022 AnderGI </p>
+    </div>
         <script src="script.js"></script>
     </body>
 </html>
